Version 2.2.0.1
=================
bear:
Changed the FillBuffer wait for file building method from a 50ms delay to a 2 second long retry at 50ms intervals. This is to get around file corruption caused by some drivers. 
Fixed a bug where the filter was not seeking correctly on the first seek, the internal bitrate was not being updated in the pids array. This was apparant on large files.

Version 2.2.0.0
=================
bear:
Found and fixed a new bug where the local pid array times were not being updated in the Update duration thread.
Fixed a bug where the Multifilereader was holding the file open when in stopped, re- FileDuration's FileReader class.
Fixed another issue with the Multifilereader mode's correct seeking time when changing between streams.
Fixed a issue with the Source Load() function where it was changing the filename paramater's pointer value.
Fixed a bug with the Multifilereader mode where it was not seeking correctly when the TSFileSink buffer size was reached.
Fixed a bug with the Multifilereader mode where it was not re-seeking correctly after changing program streams.
Changed the IAMStreamSelect menu display, does not display pointers in the menu name anymore.
Fixed a bug with the MultiFileReader::Read() function where it was trying to read data past the end of the file.
Found and fixed a few more potential divide by zero bugs.
Fixed a bug in the MultiFileReader::Read() function where it would crash if the info array had no file-> class loaded.Fixed a potential problem with the IAMStreamSelect GetCount() function not returning 0 value if there are no streams.
Fixed a potential problem if you have a threaded call to CTSFileSourcePin::GetAvailable() function if the FileReader class does not exist such as when reloading.

Version 2.1.1.9
=================
bear:
Fixed a bug with the TSFileSource's ITSFileSource property page Method that was stopping the page from displaying when called.