@@ -139,6 +139,8 @@ CTSFileSourceFilter::~CTSFileSourceFilter()
 
 DWORD CTSFileSourceFilter::ThreadProc(void)
 {
+	SetThreadPriority(GetCurrentThread(), THREAD_PRIORITY_LOWEST);
+
     HRESULT hr;  // the return code from calls
     Command com;
 
