@@ -68,6 +68,8 @@ CTSFileSourceProp::~CTSFileSourceProp(void)
 
 DWORD CTSFileSourceProp::ThreadProc(void)
 {
+	SetThreadPriority(GetCurrentThread(), THREAD_PRIORITY_LOWEST);
+
     HRESULT hr;  // the return code from calls
     Command com;
 
